enhance(mobile): sidebar navigation font size

--- a/src/main/frontend/components/container.css
+++ b/src/main/frontend/components/container.css
@@ -203,7 +203,7 @@
           }
 
           > strong {
-            @apply text-xs font-medium;
+            @apply sm:text-xs text-base font-medium;
           }
         }
 
