--- a/tailwind.mobile.css
+++ b/tailwind.mobile.css
@@ -22,6 +22,8 @@
 @import "src/main/frontend/mobile/index.css";
 @import "src/main/frontend/components/theme.css";
 @import "src/main/frontend/components/container.css";
+@import "src/main/frontend/components/repo.css";
+@import "src/main/frontend/components/onboarding/index.css";
 @import "src/main/frontend/components/block.css";
 @import "src/main/frontend/components/property.css";
 @import "src/main/frontend/components/editor.css";
