--- a/src/main/mobile/components/app.css
+++ b/src/main/mobile/components/app.css
@@ -136,10 +136,14 @@ ul {
 .block-modal-page {
   &-header {
     @apply pt-5 pb-1 px-4 flex justify-between bg-gray-01
-    sticky top-0 left-0 w-full z-[1];
+    absolute top-0 left-0 w-full z-[1] overflow-hidden;
+
+    border-radius: 26px 26px 0 0;
   }
 
   &-content {
+    @apply pt-14;
+
     #app-container-wrapper {
       @apply relative px-6;
     }
