fix: math mode brackets render incorrectly
fixes https://github.com/logseq/db-test/issues/447

--- a/src/main/frontend/components/block.css
+++ b/src/main/frontend/components/block.css
@@ -1044,6 +1044,17 @@ html.is-mac {
   height: 18px;
 }
 
+.katex svg {
+  width: initial;
+  height: initial;
+}
+.math-block {
+    @apply w-full;
+    .latex {
+        @apply w-full;
+    }
+}
+
 .ls-small-icon svg {
     width: 12px;
     height: 12px;
