fix(regression): render End of block properties redundantly
fixes https://github.com/logseq/db-test/issues/463

--- a/src/main/frontend/components/block.css
+++ b/src/main/frontend/components/block.css
@@ -1089,6 +1089,10 @@ html.is-mac {
   .positioned-properties, .time-spent {
     margin-top: 15px;
   }
+
+  .block-tags {
+    margin-top: 17px;
+  }
 }
 
 .ls-page-title .ls-properties-area {
