try to fix background color for mobile sidebar
related to https://github.com/logseq/db-test/issues/455

--- a/src/main/mobile/components/app.css
+++ b/src/main/mobile/components/app.css
@@ -509,7 +509,7 @@ html[data-silk-native-page-scroll-replaced=false] .app-silk-index-scroll-view {
 }
 
 .app-silk-sidebar-sheet-content {
-  @apply bg-gray-01 dark:bg-gray-02 flex flex-col items-center p-2;
+  @apply bg-white dark:bg-gray-02 flex flex-col items-center p-2;
   box-sizing: border-box;
   height: 100%;
   max-width: 800px;
@@ -517,7 +517,6 @@ html[data-silk-native-page-scroll-replaced=false] .app-silk-index-scroll-view {
   /* APPEARANCE */
   border-radius: 0;
   overflow: hidden;
-  background-color: white;
 }
 
 .left-sidebar-inner {
