enhance(mobile): add safe area insets for iOS devices

--- a/src/main/mobile/components/app.css
+++ b/src/main/mobile/components/app.css
@@ -14,6 +14,8 @@
 
 html.is-native-ios {
   --silk-tabbar-bottom-paddding: 2px;
+  --safe-area-inset-top: 58px;
+  --safe-area-inset-bottom: 24px;
 }
 
 html.is-native-android {
