--- a/src/main/mobile/components/app.css
+++ b/src/main/mobile/components/app.css
@@ -83,10 +83,6 @@ html {
         caret-color: var(--ls-primary-text-color);
       }
 
-      #mobile-editor-toolbar {
-        background: var(--ls-secondary-background-color);
-      }
-
       .Card-content {
         background: var(--ls-primary-background-color);
       }
@@ -604,4 +600,11 @@ html[data-silk-native-page-scroll-replaced=false] .app-silk-index-scroll-view {
 
 .menu-link, .cp__repos-quick-actions .ui__button {
   @apply text-base;
+}
+
+#mobile-editor-toolbar {
+  button {
+    @apply !bg-transparent hover:!bg-transparent active:!bg-transparent;
+    color: currentColor;
+  }
 }
