--- a/src/main/frontend/components/user/login.css
+++ b/src/main/frontend/components/user/login.css
@@ -2,6 +2,10 @@
   span.opacity-50, a.opacity-60 {
     @apply opacity-80;
   }
+
+  p {
+    @apply text-[inherit];
+  }
 }
 
 .ui__dialog-content[label=user-login] {
