enhance(auth): add password policy validation and tips in multiple languages

--- a/src/main/frontend/components/user/login.css
+++ b/src/main/frontend/components/user/login.css
@@ -6,6 +6,10 @@
   p {
     @apply text-[inherit];
   }
+
+  .ui__alert-description {
+    @apply -mb-3;
+  }
 }
 
 .ui__dialog-content[label=user-login] {
