enhance(ui): improve localization handling and update alert styles

--- a/src/main/frontend/components/user/login.css
+++ b/src/main/frontend/components/user/login.css
@@ -7,9 +7,18 @@
     @apply text-[inherit];
   }
 
-  .ui__alert-description {
-    @apply -mb-3;
+  .ui__alert {
+    @apply bg-red-300 dark:border-red-800 dark:bg-red-800/90 dark:text-red-200;
+
+    svg {
+      @apply dark:text-red-200;
+    }
+
+    &-description {
+      @apply -mb-3;
+    }
   }
+
 }
 
 .ui__dialog-content[label=user-login] {
